force-app/main/default/objects/Scheme__c/Scheme__c.object-meta.xml
<CustomObject>
    <label>Scheme</label>
    <pluralLabel>Schemes</pluralLabel>
    <nameField>
        <label>Scheme Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Trade scheme and promotion definition with budget tracking, slab configuration, and channel applicability (MOD-07 Scheme and Promotion Management)</description>
</CustomObject>