force-app/main/default/objects/Scheme__c/fields/Applicable_Channel__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Channel__c</fullName>
    <label>Applicable Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>