force-app/main/default/objects/Scheme__c/fields/Applicable_Region__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Region__c</fullName>
    <label>Applicable Region</label>
    <type>Lookup</type>
    <referenceTo>Company_Hierarchy__c</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>