force-app/main/default/objects/Scheme__c/fields/Base_UOM__c.field-meta.xml
<CustomField>
    <fullName>Base_UOM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Base Unit of Measure for the scheme. Order line item quantities are converted to this UOM before scheme evaluation.</description>
    <label>Base UOM</label>
    <referenceTo>UOM__c</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>