force-app/main/default/objects/Scheme__c/fields/Budget_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Budget_Remaining__c</fullName>
    <label>Budget Remaining</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>Budget_Amount__c - Budget_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>