force-app/main/default/objects/Scheme__c/fields/Budget_Used__c.field-meta.xml
<CustomField>
    <fullName>Budget_Used__c</fullName>
    <label>Budget Used</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>