force-app/main/default/objects/Scheme__c/fields/Free_Product__c.field-meta.xml
<CustomField>
    <fullName>Free_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Free Product</label>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Scheme Free Products</relationshipLabel>
    <relationshipName>Scheme_Free_Products</relationshipName>
    <type>Lookup</type>
</CustomField>