force-app/main/default/objects/Scheme__c/fields/Invoice_Qty_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Qty_Threshold__c</fullName>
    <label>Invoice Qty Threshold</label>
    <description>Minimum total invoice quantity to qualify for invoice-level schemes</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>