force-app/main/default/objects/Scheme__c/fields/Invoice_Qty_UOM__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Qty_UOM__c</fullName>
    <label>Invoice Qty UOM</label>
    <description>Unit of measure for invoice quantity threshold</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PC</fullName>
                <default>true</default>
                <label>PC</label>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>LTR</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>