force-app/main/default/objects/Scheme__c/fields/Invoice_Val_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Val_Threshold__c</fullName>
    <label>Invoice Value Threshold</label>
    <description>Minimum total invoice value to qualify for invoice-level schemes</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>