force-app/main/default/objects/Scheme__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <formula>AND(
    ISPICKVAL(Status__c, 'Active'),
    Start_Date__c &lt;= TODAY(),
    End_Date__c &gt;= TODAY()
)</formula>
</CustomField>