force-app/main/default/objects/Scheme__c/fields/Is_Stackable__c.field-meta.xml
<CustomField>
    <fullName>Is_Stackable__c</fullName>
    <label>Is Stackable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>