force-app/main/default/objects/Scheme__c/fields/Max_Discount_Cap__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Cap__c</fullName>
    <label>Max Discount Cap</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>