force-app/main/default/objects/Scheme__c/fields/MOV__c.field-meta.xml
<CustomField>
    <fullName>MOV__c</fullName>
    <label>Minimum Order Value</label>
    <description>Minimum order value threshold for value-based scheme triggers</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>