force-app/main/default/objects/Scheme__c/fields/Outlet_Type__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Type__c</fullName>
    <label>Outlet Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>