force-app/main/default/objects/Scheme__c/fields/Price_Discount__c.field-meta.xml
<CustomField>
    <fullName>Price_Discount__c</fullName>
    <label>Price Discount</label>
    <description>Flat amount discount per unit/order (for Discount in Value category)</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>