force-app/main/default/objects/Scheme__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Scheme_Products</relationshipLabel>
    <relationshipName>Scheme_Products_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>