force-app/main/default/objects/Scheme__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region for the scheme</description>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>