force-app/main/default/objects/Scheme__c/fields/Reward_Points__c.field-meta.xml
<CustomField>
    <fullName>Reward_Points__c</fullName>
    <label>Reward Points</label>
    <description>Points awarded when scheme qualifies (for Reward Points category)</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>