force-app/main/default/objects/Scheme__c/fields/Scheme_Category__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Category__c</fullName>
    <label>Scheme Category</label>
    <description>The benefit category: what the customer receives when qualifying</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free Products</fullName>
                <default>true</default>
                <label>Free Products</label>
            </value>
            <value>
                <fullName>Discount in %</fullName>
            </value>
            <value>
                <fullName>Discount in Value</fullName>
            </value>
            <value>
                <fullName>Reward Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>