force-app/main/default/objects/Scheme__c/fields/Scheme_Code__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Code__c</fullName>
    <label>Scheme Code</label>
    <type>Text</type>
    <length>50</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>