force-app/main/default/objects/Scheme__c/fields/Scheme_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Type__c</fullName>
    <label>Scheme Type</label>
    <description>The trigger condition type for scheme qualification</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same Product (QTY)</fullName>
            </value>
            <value>
                <fullName>Same Product (VAL)</fullName>
            </value>
            <value>
                <fullName>Assorted Product (QTY)</fullName>
            </value>
            <value>
                <fullName>Assorted Product (VAL)</fullName>
            </value>
            <value>
                <fullName>Invoice Qty Based</fullName>
            </value>
            <value>
                <fullName>Invoice Val Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>