force-app/main/default/objects/Scheme__c/fields/Target_Channel__c.field-meta.xml
<CustomField>
    <fullName>Target_Channel__c</fullName>
    <description>Target channel for the scheme</description>
    <label>Target Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>