force-app/main/default/objects/Scheme__c/validationRules/Budget_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Ensures scheme budget amount is positive when specified</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Budget_Amount__c)),
    Budget_Amount__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Budget_Amount__c</errorDisplayField>
    <errorMessage>Budget Amount must be greater than zero.</errorMessage>
</ValidationRule>