force-app/main/default/objects/Scheme__c/validationRules/Start_Date_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Before_End_Date</fullName>
    <active>true</active>
    <description>Ensures scheme Start Date is before End Date</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Start_Date__c)),
    NOT(ISBLANK(End_Date__c)),
    Start_Date__c &gt; End_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be on or after Start Date.</errorMessage>
</ValidationRule>