force-app/main/default/objects/Scheme__c/listViews/All_Schemes.listView-meta.xml
<ListView>
    <fullName>All_Schemes</fullName>
    <columns>NAME</columns>
    <columns>Scheme_Code__c</columns>
    <columns>Scheme_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Discount_Percent__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Schemes</label>
</ListView>